--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,11 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
-
+  assets:
+   - assets/carousel_images/beach.jpg
+   - assets/carousel_images/canada.jpg
+   - assets/carousel_images/mountain.jpg
+   - assets/carousel_images/rainy.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
